--- a/stucampus/settings.py.sample
+++ b/stucampus/settings.py.sample
@@ -1,3 +1,7 @@
+import os
+
+TEMPLATES_PREFIX = os.path.abspath(".")
+
 # Django settings for stucampus project.
 
 DEBUG = True
@@ -111,6 +115,7 @@ TEMPLATE_DIRS = (
     # Put strings here, like "/home/html/django_templates" or "C:/www/django/templates".
     # Always use forward slashes, even on Windows.
     # Don't forget to use absolute paths, not relative paths.
+    os.path.join(TEMPLATES_PREFIX, "templates"),
 )
 
 INSTALLED_APPS = (
