--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
 
 script:
   - mv ./settings_for_travis.py ./stucampus/settings.py
-  - python ./manage.py test master
+  - python ./manage.py test
 
 branches:
   only:
