--- a/stucampus/settings.py.sample
+++ b/stucampus/settings.py.sample
@@ -126,6 +126,7 @@ INSTALLED_APPS = (
     'django.contrib.messages',
     'django.contrib.staticfiles',
     'stucampus.master',
+    'stucampus.news',
     # Uncomment the next line to enable the admin:
     # 'django.contrib.admin',
     # Uncomment the next line to enable admin documentation:
