--- a/stucampus/settings.py.sample
+++ b/stucampus/settings.py.sample
@@ -1,6 +1,6 @@
 import os
 
-TEMPLATES_PREFIX = os.path.abspath(".")
+APP_ROOT = os.paht.abspath(os.path.dirname(os.path.realpaht(__file__)))
 
 # Django settings for stucampus project.
 
@@ -76,6 +76,7 @@ STATICFILES_DIRS = (
     # Put strings here, like "/home/html/static" or "C:/www/django/static".
     # Always use forward slashes, even on Windows.
     # Don't forget to use absolute paths, not relative paths.
+    os.path.join(APP_ROOT, "static/),
 )
 
 # List of finder classes that know how to find static files in
@@ -115,7 +116,7 @@ TEMPLATE_DIRS = (
     # Put strings here, like "/home/html/django_templates" or "C:/www/django/templates".
     # Always use forward slashes, even on Windows.
     # Don't forget to use absolute paths, not relative paths.
-    os.path.join(TEMPLATES_PREFIX, "templates"),
+    os.path.join(APP_ROOT, "templates"),
 )
 
 INSTALLED_APPS = (
