--- a/stucampus/settings.py.sample
+++ b/stucampus/settings.py.sample
@@ -1,6 +1,8 @@
 import os
 
+
 APP_ROOT = os.paht.abspath(os.path.dirname(os.path.realpaht(__file__)))
+
 
 # Django settings for stucampus project.
 
@@ -33,11 +35,11 @@ ALLOWED_HOSTS = ["*"]
 # http://en.wikipedia.org/wiki/List_of_tz_zones_by_name
 # although not all choices may be available on all operating systems.
 # In a Windows environment this must be set to your system time zone.
-TIME_ZONE = 'America/Chicago'
+TIME_ZONE = 'Asia/Shanghai'
 
 # Language code for this installation. All choices can be found here:
 # http://www.i18nguy.com/unicode/language-identifiers.html
-LANGUAGE_CODE = 'en-us'
+LANGUAGE_CODE = 'zh-cn'
 
 SITE_ID = 1
 
@@ -76,7 +78,7 @@ STATICFILES_DIRS = (
     # Put strings here, like "/home/html/static" or "C:/www/django/static".
     # Always use forward slashes, even on Windows.
     # Don't forget to use absolute paths, not relative paths.
-    os.path.join(APP_ROOT, "static/),
+    os.path.join(APP_ROOT, 'static'),
 )
 
 # List of finder classes that know how to find static files in
@@ -127,6 +129,7 @@ INSTALLED_APPS = (
     'django.contrib.messages',
     'django.contrib.staticfiles',
     'stucampus.master',
+    'stucampus.account',
     'stucampus.news',
     # Uncomment the next line to enable the admin:
     # 'django.contrib.admin',
