--- a/stucampus/settings.py.sample
+++ b/stucampus/settings.py.sample
@@ -131,6 +131,7 @@ INSTALLED_APPS = (
     'stucampus.master',
     'stucampus.account',
     'stucampus.news',
+    'stucampus.organization',
     # Uncomment the next line to enable the admin:
     # 'django.contrib.admin',
     # Uncomment the next line to enable admin documentation:
