--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ install:
   - pip install -r requirements.txt --use-mirrors
 
 script:
+  - mkdir ./tmp
   - mv ./settings_for_travis.py ./stucampus/settings.py
   - python ./manage.py test
 
