--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
-Django==1.5.1
-pyyaml==3.10
-DjangoUeditor==1.4.125
-PyYAML==3.10
+Django==1.9.3
+django-ipware==1.1.3
+django-qiniu-storage==2.3.0
+DjangoUeditor==1.8.143
 html2text==3.200.3
 lxml==3.3.4
-requests==2.2.1
-wsgiref==0.1.2
+Pillow==3.1.0
+PyYAML==3.10
+qiniu==7.0.6
 raven==4.1.1
-django-qiniu-storage
-django-ipware
+requests==2.2.1
+six==1.10.0
+wheel==0.24.0
+xlwt==1.0.0
