--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,41 @@
+arrow==0.7.0
+auth==0.5.3
+beautifulsoup4==4.5.1
+blinker==1.4
 Django==1.9.3
 django-ipware==1.1.3
 django-qiniu-storage==2.3.0
 DjangoUeditor==1.8.143
+eventlet==0.19.0
+extras==1.0.0
+falcon==1.0.0
+fixtures==3.0.0
+greenlet==0.4.10
+gunicorn==19.6.0
 html2text==3.200.3
+html5lib==0.9999999
+linecache2==1.0.0
+login-szu==1.0.2
 lxml==3.3.4
+mongoengine==0.10.6
+numpy==1.11.1
+pbr==1.10.0
 Pillow==3.1.0
+psycopg2==2.6.1
+pycrypto==2.6.1
+pymongo==3.3.0
+python-dateutil==2.5.3
+python-mimeparse==1.5.2
 PyYAML==3.10
 qiniu==7.0.6
 raven==4.1.1
-requests==2.2.1
+requests==2.6.0
 six==1.10.0
-wheel==0.24.0
-xlwt==1.0.0
-arrow==0.7.0
-login-szu==1.0.2
+testtools==2.2.0
+traceback2==1.4.0
+unittest2==1.1.0
+wechat-sdk==0.6.4
+Werkzeug==0.11.10
 xlrd==0.9.4
-beautifulsoup4==4.5.1
-numpy==1.11.1
-html5lib==0.9999999
+xlwt==1.0.0
+xmltodict==0.9.2
