添加下载excel功能

--- a/requirements.txt
+++ b/requirements.txt
@@ -14,15 +14,18 @@ greenlet==0.4.10
 gunicorn==19.6.0
 html2text==3.200.3
 html5lib==0.9999999
+Jinja2==2.8
 linecache2==1.0.0
 login-szu==1.0.2
 lxml==3.3.4
+MarkupSafe==0.23
 mongoengine==0.10.6
 numpy==1.11.1
 pbr==1.10.0
 Pillow==3.1.0
 psycopg2==2.6.1
 pycrypto==2.6.1
+PyExcelerate==0.7.1
 pymongo==3.3.0
 python-dateutil==2.5.3
 python-mimeparse==1.5.2
